row_search_for_mysql(): Never try semi-consistent read in unique searches. They are only useful in table scans. (Bug #52663)